Fix CheckIsConstant for non-constant values and checking for empty https://bugs.webkit.org/show_bug.cgi?id=210752

Reviewed by Saam Barati.

We need to make sure that we only have one speculated type if our value
is empty.

* dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):


Canonical link: https://commits.webkit.org/223634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260377 268f45cc-cd09-0410-ab3c-d52691b4dbfc